Funcion de camara para android 5.1 lollipop y mas antiguas desarrollada, spinner_item_roles desabilitado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,21 @@
 
     /*loguin*/
     <string name="inicio">Bienvenido</string>
-    <string name="usuario">Usuario</string>
+    <string name="usuario">Usuario (DNI) </string>
     <string name="contraseña">Contraseña</string>
     <string name="ingresar">Ingresar</string>
     <string name="registrar">Registrarse</string>
 
 
     /*registro*/
-
+    <string name="nombre">Nombre</string>
+    <string name="aoellido">Apellido</string>
+    <string name="contrasenia">Contraseña</string>
+    <string name="rol">Rol</string>
+    <string name="mail">E-mail</string>
+    <string name="Elija">Elija un Rol</string>
+    <string name="todo">TODO</string>
+    <string name="cargarImagen">Cargar Imagen . . . </string>
 
     /*mi Perfil*/
 
