se arreglo la vista de todos los usuarios, el spinner y la tab

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="todo">TODO</string>
     <string name="cargarImagen">Cargar Imagen . . . </string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
     /*mi Perfil*/
 
     /*todo los perfiles*/
