implemente los retornos de las vistas a sus vistas padres y agregue etiquetas en cada pestaña.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TP2Loguin</string>
+    <string name="app_name">RegApp</string>
 
     /*loguin*/
     <string name="inicio">Bienvenido</string>
